[package]
name = "minecraft_tunnel"
version = "0.1.0"
edition = "2024"
authors = ["doprz"]
description = "A terminal-based Minecraft voxel tunnel renderer using DDA ray casting"
license = "MIT"
repository = "https://github.com/doprz/minecraft_tunnel"
keywords = ["minecraft", "ray-casting", "terminal"]


[dependencies]
crossterm = "0.29.0"
fastrand = "2.3.0"
